fix scrollbar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,8 +6,8 @@
     font-family: 'Roboto', sans-serif;
 }
 
-body{
-  padding-bottom: 100px;
+body {
+    padding-bottom: 100px;
 }
 
 .container_bc {
@@ -185,15 +185,15 @@ body{
 }
 
 .breadcrumb li:first-child a {
-  padding-left: 10px;
+    padding-left: 10px;
 }
 
-.breadcrumb li:not(:first-child) a{
-  background:        lightgray;
+.breadcrumb li:not(:first-child) a {
+    background: lightgray;
 }
 
-.breadcrumb li:not(:first-child) a:after{
-  border-left-color: lightgray;
+.breadcrumb li:not(:first-child) a:after {
+    border-left-color: lightgray;
     padding-left: 10px;
 }
 
@@ -532,6 +532,8 @@ img.boeken {
     grid-template-areas: "header header header header" "main main . sidebar" "footer footer footer footer";
     margin-top: 50px;
     padding: 50px;
+    border: black 1px solid;
+    border-radius: 50px;
 }
 
 .text {
@@ -540,7 +542,7 @@ img.boeken {
     border-radius: 50px;
     height: 700px;
     overflow: auto;
-    width: 96%;
+    width: 100%;
     left: 0px;
 }
 
@@ -637,15 +639,15 @@ h1 {
     border-radius: 50px;
 }
 
-.background-blue{
+.background-blue {
     background-color: lightblue;
 }
 
-.background-red{
+.background-red {
     background-color: rgb(248, 81, 81);
 }
 
-.background-oranje{
+.background-oranje {
     background-color: rgb(255, 191, 72);
 }
 
@@ -657,11 +659,13 @@ h1 {
     border-radius: 10px;
     background-color: #F5F5F5;
     margin-right: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 ::-webkit-scrollbar {
     width: 12px;
-    background-color: #F5F5F5;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -672,6 +676,10 @@ h1 {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+html {
+    overflow: hidden;
 }
 
 
@@ -706,14 +714,15 @@ h1 {
 
 
 /* Footer Styling */
-footer{
-position: fixed;
-bottom:0;
-width:100%;
-background-color: grey;
-color: white;
-padding: 10px 0px 10px 0px;
-border-top: 1px black solid;
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: grey;
+    color: white;
+    padding: 10px 0px 10px 0px;
+    border-top: 1px black solid;
 }
 
 footer {
@@ -740,4 +749,11 @@ footer img {
 
 footer img a {
     text-decoration: none;
+}
+
+.footer-image {
+    display: flex;
+    gap: 40px;
+    display: ruby;
+    ;
 }
